# py-rust-optionpricer-example

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
notebooks/: market_data.csv  market_data_preparation.ipynb  marketdata.csv  option_trades.csv  pricing_example.ipynb
optpricerpy/: build.py  mypy.ini  pyproject.toml  requirements-dev.txt  tox.ini
optpricerpy/optpricerpy/: __init__.py  portfolio.py  pricing_engine.py
optpricerpy/rs/: Cargo.toml
optpricerpy/rs/src/: error.rs  lib.rs  portfolio.rs  pricingengine.rs
optpricerpy/tests/: example_equity_trades.csv  example_marketdata.csv  example_option_trades.csv  expected_pricing_result.csv  test_portfolio.py  test_pricing_engine.py
pricingcore/: Cargo.toml
pricingcore/src/: dispatcher.rs  error.rs  genericpricer.rs  instrument.rs  lib.rs  lookupctx.rs  marketdataproviders.rs  optionpricer.rs  portfolio.rs  positioncalculator.rs  pricingctx.rs  stackedvectorctx.rs  stockpricer.rs  transform.rs
pricingcore/src/model/: bsmodel.rs  mod.rs  modelerror.rs
