[tool.poetry]
name = "optpricerpy"
version = "0.1.0"
description = ""
authors = ["Rickard Kjellin <rickard.kjellin@gmail.com>"]
build = "build.py"

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.3.4"
pyarrow = "^6.0.0"
pandera = "^0.8.0"
numpy = "^1.21.4"
xarray = "^0.20.1"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pytest = "^6.2.5"
setuptools-rust = "^0.12.1"
ipykernel = "^6.5.1"
tox = "^3.24.4"
isort = "^5.10.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "setuptools-rust"]
build-backend = "poetry.core.masonry.api"
