[package]
authors = ["Rickard Kjellin"]
name = "optpricerpy"
version = "0.1.0"
description = "toy pricing engine exposed to python"
edition = "2021"

[dependencies]
pricingcore = { path = "../../pricingcore" }
arrow = { version = "6.1", features = ["pyarrow"] }
chrono = "0.4"
thiserror = "1.0"
numpy = "0.14"
ndarray = { version = "0.15", features = ["approx"] }
rayon = "1.5"

[dependencies.pyo3]
version = "0.14.0"
features = ["extension-module"]

[lib]
name = "_optpricerpy"
crate-type = ["cdylib"]

[package.metadata.maturin]
classifier=[
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]
